Adicionando componente "Certidão"

--- a/frontend/src/app/pacientes/formulario-paciente/certidao/certidao.component.html
+++ b/frontend/src/app/pacientes/formulario-paciente/certidao/certidao.component.html
@@ -1,1 +1,38 @@
-<p>certidao works!</p>
+<form class="ui-g ui-fluid" [formGroup]="certidao">
+  <div class="ui-g-12">
+    <div class="ui-g-4">
+      <input
+        type="text"
+        pInputText
+        placeholder="Registro de Nascimento"
+        formControlName="registroDeNascimento"
+      />
+    </div>
+    <div class="ui-g-3">
+      <input type="text" pInputText placeholder="Tipo Certidão" formControlName="tipoCertidao" />
+    </div>
+    <div class="ui-g-2">
+      <input
+        type="text"
+        pInputText
+        placeholder="Nome do Cartório"
+        formControlName="nomeDoCartorio"
+      />
+    </div>
+    <div class="ui-g-1">
+      <input type="text" pInputText placeholder="Livro" formControlName="livro" />
+    </div>
+    <div class="ui-g-1">
+      <input type="text" pInputText placeholder="Folhas" formControlName="folhas" />
+    </div>
+    <div class="ui-g-3">
+      <input type="text" pInputText placeholder="Termo" formControlName="termo" />
+    </div>
+    <div class="ui-g-3">
+      <input type="text" pInputText placeholder="Data de Emissão" formControlName="dataDeEmissao" />
+    </div>
+    <div class="ui-g-3">
+      <input type="text" pInputText placeholder="Número da DN" formControlName="numeroDaDN" />
+    </div>
+  </div>
+</form>
